Adicionado h2 na header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header><h1><em>MEGA-SENA</em></Mega-Sena></h1></header>
+    <header>
+        <h2>Verificador de Resultado</h2>
+        <h1>MEGA-SENA</Mega-Sena></h1>
+    </header>
     <main>
         <section id="numerosSorteados">
             <h2>Números sorteados</h2>
