--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h2>Verificador de Resultado</h2>
-        <h1>MEGA-SENA</Mega-Sena></h1>
+        <h1>MEGA-SENA</h1>
     </header>
     <main>
         <section id="numerosSorteados">
@@ -40,7 +40,6 @@ Jogos separados com quebra de linha."></textarea>
         </section>
     </main>
 
-    <footer></footer>
     <script src="script.js"></script>
 </body>
 </html>
