--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Jogos separados com quebra de linha."></textarea>
             </div>
         </section>
     </main>
-
+<footer></footer>
     <script src="script.js"></script>
 </body>
 </html>
